Adding home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,13 @@
     Angular Lazy Loading Demo
   </span>
 </md-toolbar>
+
+<nav>
+  <a>
+    <button md-button color="primary" class="home-button" [routerLink] = "'/'">
+      Home
+    </button>
+  </a>
+</nav>
+
+<router-outlet></router-outlet>
